--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2>Votre Panier</h2>
 
             <div id="panier-liste">
-                <p>Votre panier est vide.</p>
+                <p class="empty-cart-p hidden">Votre panier est vide.</p>
             </div>
 
             <div class="total-section">
@@ -34,8 +34,8 @@
 
             <div class="commande-box">
                 <h3>Finaliser la commande</h3>
-                <div id="message-feedback"></div> <input type="email" id="email-client"
-                    placeholder="Votre email (ex: jean@mail.com)">
+                <div id="message-feedback"></div>
+                <input type="email" id="email-client" placeholder="Votre email (ex: jean@mail.com)">
                 <button id="btn-commander">Passer la commande</button>
             </div>
         </aside>
